fix(projects): ios misalignment
The items were aligned left on ios

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,5 @@
 .title, .subtitle {
     letter-spacing: .2rem;
-    word-break: keep-all;
 }
 
 @media screen and (min-width: 1024px) {
